LAF-24 fix language selector visibility

--- a/style/cosmic.css
+++ b/style/cosmic.css
@@ -107,6 +107,11 @@
     overflow:hidden;
 }
 
+.headermenu,
+.langmenu {
+    clear: none;
+}
+
 #custommenu ul li {
     border: none;
 }
